hard-gists/e9421f06ea3a62bfbb8c/run.log
=== Docker Run Log for e9421f06ea3a62bfbb8c ===
Started at: Mi 29. Okt 20:48:12 CET 2025

[2025-10-29 20:48:13] START: Running container for e9421f06ea3a62bfbb8c
[2025-10-29 20:48:13] SUCCESS: Container f54d01ee9cc5605fd304902d8d965eeba4d46de44cdcdba5a8bddfd8d0b76c4a started for e9421f06ea3a62bfbb8c
=== Container logs for e9421f06ea3a62bfbb8c ===
  File "/snippet.py", line 36
    print "accuracy (PU):",metrics.accuracy_score(y[s==0],clf.predict(X[s==0]))
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for e9421f06ea3a62bfbb8c ===
[2025-10-29 20:48:15] INFO: Container f54d01ee9cc5605fd304902d8d965eeba4d46de44cdcdba5a8bddfd8d0b76c4a has stopped
